--- a/Graph.WPF/App.xaml
+++ b/Graph.WPF/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Graph.WPF.App"
+﻿<Application x:Class="GraphProject.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Graph.WPF"
+             xmlns:local="clr-namespace:GraphProject.WPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
